feat: add some tests